frontend: Fix heading spacing on Role and Ingress Overview pages

--- a/frontend/public/components/_users.scss
+++ b/frontend/public/components/_users.scss
@@ -2,10 +2,6 @@
   padding: 0 0 10px 0;
 }
 
-.co-m-pane__body + .co-m-pane__heading {
-  padding-top: 15px;
-}
-
 .co-m-pane__body:last {
   padding-bottom: 30px;
 }
